--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,3 +1,9 @@
+/*
+//////////////////////
+// Cart Appearance //
+////////////////////
+*/
+
 #cart {
     z-index: 2;
     float: unset;
@@ -13,15 +19,24 @@
     border-radius: 0px 0px 10px 10px;
 }
 
+#cart h2 {
+    margin: 10px 0px;
+}
+
 #cart .contents {
-    margin: 10px;
     display: flex;
     flex-flow: column nowrap;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
 }
 
+.cart-list {
+    background: gray;
+    width: 100%;
+}
+
 .contents > button {
+    margin-top: 5px;
     color:white;
     font-size: .8em;
     
@@ -32,9 +47,75 @@
     padding: 7px;
     width: 100%;
 }
-  
+
+button.close-cart {
+    position: absolute;
+    top: 4px;
+    left: 370px;
+    
+    width: 15px;
+    padding: 0px;
+    margin: 0px;
+
+    border: none;
+    border-radius: 0px;
+    width: 20px;
+    background: black;
+    color: white;
+
+    font-weight: bold;
+    font-size: 14pt;
+}
+
 .hide {
     display: none;
+}
+
+
+/*
+/////////////////
+// Cart Items //
+///////////////
+*/
+
+.cart-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background: rgb(255, 255, 255);
+    padding: 5px;
+    margin: 1px 0px;
+    font-size: 12pt;
+    font-weight: normal;
+    text-transform: capitalize;
+}
+
+.cart-item > img {
+    height: 50px;
+    width: auto;
+}
+
+.info {
+    width: 170px;
+    padding-left: 10px;
+    margin-left: 0px;
+}
+
+.quant {
+    display: flex;
+    align-items: center;
+}
+
+.quant button {
+    font-weight: bolder;
+    background: red;
+    border-radius: 100%;
+    text-align: center;
+    width: 20px;
+    height: 20px;
+    border: none;
+    margin: 0px 2px;
 }
 
 #confirmation {
@@ -60,17 +141,4 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.cart-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    padding: 5px;
-}
-
-.cart-item > img {
-    height: 50px;
-    width: auto;
 }
