--- a/src/components/site_layout/Home.css
+++ b/src/components/site_layout/Home.css
@@ -10,7 +10,7 @@
 	min-width: 1300px;
 	height: 100%;
 	padding: 20px 0px;
-	background: linear-gradient(0deg, rgb(0, 225, 255) 35%, rgb(255, 255, 255) 100%);
+	background: rgb(240, 240, 240);
 }
 
 .welcome {
